Change writing patterns

--- a/src/public/index.jade
+++ b/src/public/index.jade
@@ -1,7 +1,7 @@
 html
 	head
 		title Node.js Starter
-		link(rel='stylesheet' href='index.css')
-		script(src='index.js')
+		link(rel="stylesheet" href="index.css")
+		script(src="index.js")
 	body
 		p Welcome! The project is running okay.
